--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -3,4 +3,10 @@
   <% @categories.each do |category| %>
     <li><%= link_to category.name, category %></li>
   <% end %>
+  
+  <li style="margin-top: 2rem"><%= link_to 'Add new category', new_category_path %></li>
 </ul>
+
+
+
+
