--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -1,15 +1,15 @@
-<%= form_for @category do |f| %>
-
+<%= form_for [@category, @product] do |f| %>
   <div>
     <%= f.label :name %>
     <%= f.text_field :name %>
-  <div>
+  </div>
+
   <div>
     <%= f.label :description %>
     <%= f.text_area :description %>
   </div>
+
   <div>
     <%= f.submit %>
   </div>
-
 <% end %>
