--- a/app/views/categories/edit.html.erb
+++ b/app/views/categories/edit.html.erb
@@ -1,5 +1,5 @@
 <h1>Edit Category</h1>
 <%= render 'form' %>
-<%= link_to 'Show', @category %> |
-<%= link_to 'Back', categories_path %>
+<%= link_to 'Back', @category %> |
+<%= link_to 'Home', categories_path %>
 
